Bug 5413 - colors for the bar behind the tabs were specified only in global - good catch stevel
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@7017 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/skin/colors.css
+++ b/feathers/rubberducky/skin/colors.css
@@ -813,6 +813,12 @@ tabpanels {
   border-bottom: 1px solid #202220; /** Button Shadow */
 }
 
+/** The bar between the tabs and the tab panels. **/
+.tabs-bottom {
+  border-top: 1px solid #797f76 !important;
+  background-color: #313131;
+}
+
 /**
  * Tab Scrollbox Arrow Buttons
  */
